omit the core protobuf-java classes from the jar (#1459)